# openapi.yaml
@@ -83,6 +83,39 @@ paths:
           content:
             application/json:
               schema: {}
+  /api/v1/albums/{year}/{month}:
+    get:
+      summary: Get Album Images
+      operationId: get_album_images_api_v1_albums__year___month__get
+      parameters:
+      - name: year
+        in: path
+        required: true
+        schema:
+          type: integer
+          title: Year
+      - name: month
+        in: path
+        required: true
+        schema:
+          type: integer
+          title: Month
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Image'
+                title: Response Get Album Images Api V1 Albums  Year   Month  Get
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /api/v1/stats:
     get:
       summary: Get Stats
@@ -103,6 +136,35 @@ paths:
           content:
             application/json:
               schema: {}
+  /api/v1/show-database:
+    get:
+      summary: Show Database
+      operationId: show_database_api_v1_show_database_get
+      parameters:
+      - name: password
+        in: query
+        required: true
+        schema:
+          type: string
+          title: Password
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
 components:
   schemas:
     Body_upload_image_api_v1_images_post:
